--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<div class="card-wrapper">
 					<div class="card-box align-center">
 						<h1 class="card-title mbr-fonts-style mb-4 display-1">
-							<strong>R4Stuio</strong></h1>
+							<strong>R4Studio</strong></h1>
 						<p class="mbr-text mbr-fonts-style mb-4 display-7">
 							Potrzebujesz usług typu.&nbsp;<br>- Montaż filmu<br>- Grafiki komputerowe<br>- Mix/Mastering utworu<br>- Stworzenie bitu<br>Idealnie trafiłeś!</p>
 						<div class="mbr-section-btn mt-4"><a class="btn btn-warning display-7" href="index.html#features031-2">O nas!</a></div>
