--- a/index.html
+++ b/index.html
@@ -260,11 +260,11 @@
                             <input type="text" name="name" placeholder="Imię" data-form-field="name" class="form-control" value="" id="name-form02-6">
                         </div>
                         <div class="col-md col-sm-12 form-group mb-3" data-for="email">
-                            <input type="email" name="email" placeholder="Adres E-Mial" data-form-field="email" class="form-control" value="" id="email-form02-6">
+                            <input type="email" name="email" placeholder="Adres mailowy" data-form-field="email" class="form-control" value="" id="email-form02-6">
                         </div>
                         
                         <div class="col-12 form-group mb-3" data-for="textarea">
-                            <textarea name="textarea" placeholder="Message" data-form-field="textarea" class="form-control" id="textarea-form02-6"></textarea>
+                            <textarea name="textarea" placeholder="Wiadomość (jaką usługę potrzebujesz itd.)" data-form-field="textarea" class="form-control" id="textarea-form02-6"></textarea>
                         </div>
                         <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn"><button type="submit" class="btn btn-primary display-7">Wyślij wiadomość</button></div>
                     </div>
